style.css
html, body {
	height: 100%;
	width: 100%;
	padding: 0;
	margin: 0;
	background-color: #f8f7f3;
}

h1 {
	font-family: 'Alegreya', serif;
	color: #494949;
}

a, a:visited, a:hover, a:active, a:focus {
	text-decoration: none;
	color: #494949;
}

a:hover {
	color: #494949;
}

a {
	position: relative;
	text-decoration: none;
}
a:before {
	content: '';
	position: absolute;
	width: 100%;
	height: 2px;
	bottom: -2px;
	left: 0;
	background-color: #494949;
	visibility: hidden;
	/*backface-visibility: hidden;*/
	/*transform: translateZ(0);*/
	-webkit-transform: scaleX(0);
	-moz-transform: scaleX(0);
	transform: scaleX(0);
	-webkit-transition: transform 0.3s;
	transition: transform 0.3s;

}

a:hover:before {
	visibility: visible;
	-webkit-transform: scaleX(1);
	-moz-transform: scaleX(1);
	transform: scaleX(1);
}

p, li {
	font-family: 'Source Sans Pro', sans-serif;
	font-size: 16px;
	line-height: 16px;
	color: #494949;
}
ul {
	list-style: square;
	padding-left: 20px;
}
li {
	padding-bottom: 5px;
}

.content > div {
	padding-left: 46px;
	padding-right: 46px;
}

.section {
	padding-top: 20px;
}
.section-title {
	font-size: 20px;
	line-height: 20px;
	color: #366092;
}

.inline-link {
	/*color: #2ba8df !important;*/
	font-weight: 700;
}

.project-title {
	font-family: 'Source Sans Pro', sans-serif;
	font-size: 16px;
	line-height: 16px;
	font-weight: 700;
}
.class-title {
	font-family: 'Source Sans Pro', sans-serif;
	font-size: 16px;
	line-height: 16px;
	font-style: italic;
}
.project {
	padding-bottom: 10px;
	padding-top: 10px;
	padding-right: 10px;
}


.project-description {
	padding-top: 10px;
}

.project-content {
	border-style: solid;
	border-width: 1px;
	border-bottom-right-radius: 10px;
	border-bottom-left-radius: 10px;
	padding-left: 10px;
	padding-right: 10px;
}

.project-header {
	padding-top: 10px;
	font-weight: 700;
}

#name-container {
	display: inline-block;
	position: relative;
	top: -18px;
	left: 36px;
	padding-left: 10px;
	padding-right: 10px;
	background-color: #f8f7f3;
	height: 36px;
}
#name {
	font-size: 36px;
	line-height: 36px;
	margin: 0;
	height: 36px;
	vertical-align: middle;
	float:right;
	color: #366092;
}

#links-container {
	display: inline-block;
	position: absolute;
	top: -11px;
	height: 14px;
	right: 36px;
	padding-left: 5px;
	padding-right: 5px;
	background-color: #f8f7f3;
}
#links-container > a {
	font-family: 'Source Sans Pro', sans-serif;
	font-weight: 700;
	font-size: 14px;
	line-height: 14px;
	margin-left: 10px;
	margin-right: 10px;
}

#content-container {
	position: absolute;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
	height: 90%;
	width: 90%;
	border-style: solid;
	border-width: 2px;
	border-color: #494949;
}

#content-container .content-wrapper {
	height: 95%;
	overflow: scroll;
	
}

#picture {
	display: inline-block;
	width: 36px;
	height: 36px;
	vertical-align: middle;
	background-color: #ccc;
	margin-right: 10px;
	background-image: url('images/profile.jpg');
	border-radius: 50%;
}
#picture > a {
	display: block;
	width: 100%;
	height: 100%;
}
#picture > a:before {
	content: none;
}
#picture > a:hover:before {
	visibility: hidden;
}

